Add unordered list

--- a/hello_world.html
+++ b/hello_world.html
@@ -9,5 +9,12 @@
 <h1>Hello World!</h1>
 <h2>Welcome to Codeup</h2>
 
+<h1>How to add/commit your work to Github</h1>
+
+<ul>
+    <li>Create a new file or edit an existing file</li>
+    <li>In IntelliJ, make a comiit w/ Command+K </li>
+    <li>Any time you add new work, make a commit </li>
+</ul>
 </body>
 </html>
