--- a/hello_world.html
+++ b/hello_world.html
@@ -15,6 +15,8 @@
     <li>Create a new file or edit an existing file</li>
     <li>In IntelliJ, make a comiit w/ Command+K </li>
     <li>Any time you add new work, make a commit </li>
+    <li>Add a "commit message" that explains what you're doing</li>
+    <li> Hover over the "Commit" and select "commit and push"</li>
 </ul>
 </body>
 </html>
