Added more directions on committing

--- a/hello_world.html
+++ b/hello_world.html
@@ -10,7 +10,9 @@
 <h2>Welcome to Codeup</h2>
 
 <h1>How to add/commit your work to Github</h1>
-
+<h2>This is a H2 heading</h2>
+<h3>This is a H3 heading</h3>
+<h4>This is a H4 heading</h4>
 <ul>
     <li>Create a new file or edit an existing file</li>
     <li>In IntelliJ, make a comiit w/ Command+K </li>
