Added more directions on committing

--- a/hello_world.html
+++ b/hello_world.html
@@ -19,6 +19,8 @@
     <li>Any time you add new work, make a commit </li>
     <li>Add a "commit message" that explains what you're doing</li>
     <li> Hover over the "Commit" and select "commit and push"</li>
+    <li>Git commit puts your changes into your local repo</li>
+    <li>While git push sends your changes to the Remote Location, like Github</li>
 </ul>
 </body>
 </html>
