corrected spelling and added define of Commit and Push

--- a/hello_world.html
+++ b/hello_world.html
@@ -15,7 +15,7 @@
 <h4>This is a H4 heading</h4>
 <ul>
     <li>Create a new file or edit an existing file</li>
-    <li>In IntelliJ, make a comiit w/ Command+K </li>
+    <li>In IntelliJ, make a commit w/ Command+K </li>
     <li>Any time you add new work, make a commit </li>
     <li>Add a "commit message" that explains what you're doing</li>
     <li> Hover over the "Commit" and select "commit and push"</li>
