changes during class

--- a/hello_world.html
+++ b/hello_world.html
@@ -19,8 +19,23 @@
     <li>Any time you add new work, make a commit </li>
     <li>Add a "commit message" that explains what you're doing</li>
     <li> Hover over the "Commit" and select "commit and push"</li>
+    <li>It is Monday. welcome to <a href="http://codeup.com">Codeup</a> </li>
     <li>Git commit puts your changes into your local repo</li>
     <li>While git push sends your changes to the Remote Location, like Github</li>
 </ul>
+
+<div>Div elements (divider elements) are Block elements.</div>
+<a href="#">Anchor tags are "inline" elements </a>
+
+shortcuts
+
+shift + option click multi spots
+shift + command left right -> select line  while UP and down will move selected text up and down
+
+
+
+
+<h2>lorem + tab will give you the Lorem text</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, commodi consequuntur cum dolor dolorem ea facilis hic inventore nam optio pariatur quam qui quia quibusdam, ratione repellendus rerum ullam voluptas!</p>
 </body>
 </html>
