Added dir for img file Added img to html that is a link to google

--- a/hello_world.html
+++ b/hello_world.html
@@ -24,6 +24,8 @@
     <li>While git push sends your changes to the Remote Location, like Github</li>
 </ul>
 
+<a href="https://google.com"><img src="img/google.jpeg" alt="Image Link to Google"></a>
+
 <div>Div elements (divider elements) are Block elements.</div>
 <a href="#">Anchor tags are "inline" elements </a>
 
