Added dir for img file Added img to html that is a link to google

--- a/hello_world.html
+++ b/hello_world.html
@@ -2,42 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Veridian Dynamics</title>
 </head>
 <body>
+<div id="top"></div>
+<h1>Welcome to Veridian Dynamics!</h1>
+<br>
+At Veridian Dynamics, <strong>we</strong> solve <itlias>your</itlias> promblems with <strong><itlias>technology.</itlias></strong>
+<hr>
 
-<h1>Hello World!</h1>
-<h2>Welcome to Codeup</h2>
-
-<h1>How to add/commit your work to Github</h1>
-<h2>This is a H2 heading</h2>
-<h3>This is a H3 heading</h3>
-<h4>This is a H4 heading</h4>
+<h4>Core Values</h4>
 <ul>
-    <li>Create a new file or edit an existing file</li>
-    <li>In IntelliJ, make a commit w/ Command+K </li>
-    <li>Any time you add new work, make a commit </li>
-    <li>Add a "commit message" that explains what you're doing</li>
-    <li> Hover over the "Commit" and select "commit and push"</li>
-    <li>It is Monday. welcome to <a href="http://codeup.com">Codeup</a> </li>
-    <li>Git commit puts your changes into your local repo</li>
-    <li>While git push sends your changes to the Remote Location, like Github</li>
+    <li>Competence</li>
+    <li>Involvment </li>
+    <li>Technology </li>
 </ul>
+<h4>Our Process</h4>
+<ol>
+    <li>Plan</li>
+    <li>Evaluate</li>
+    <li>Implement</li>
+</ol>
+<h4>2020 Vision</h4>
+<ul>
+    <li>Become #1 in Technology</li>
+    <li>Increase Success by 20% </li>
+    <li>Increase Business by 30% </li>
+</ul>
+<hr>
 
-<a href="https://google.com"><img src="img/google.jpeg" alt="Image Link to Google"></a>
+<h4>Company Vision</h4>
 
-<div>Div elements (divider elements) are Block elements.</div>
-<a href="#">Anchor tags are "inline" elements </a>
+<img width="300" src="img/pic1.jpeg" alt="computers">
+<img width="300" src="img/pic2.jpeg" alt="computers">
+<br>
+<img width="300" src="img/pic3.jpeg" alt="computers">
+<img width="300" src="img/pic4.jpeg" alt="computers">
 
-shortcuts
+<h4>Our Product</h4>
+<table>
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table>
 
-shift + option click multi spots
-shift + command left right -> select line  while UP and down will move selected text up and down
-
-
-
-
-<h2>lorem + tab will give you the Lorem text</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, commodi consequuntur cum dolor dolorem ea facilis hic inventore nam optio pariatur quam qui quia quibusdam, ratione repellendus rerum ullam voluptas!</p>
+<a href="#top">Go to the top of the page.</a>
 </body>
 </html>
