made correction to italic tag

--- a/welcome.html
+++ b/welcome.html
@@ -8,7 +8,7 @@
 <div id="top"></div>
 <h1>Welcome to Veridian Dynamics!</h1>
 <br>
-At Veridian Dynamics, <strong>we</strong> solve <itlias>your</itlias> promblems with <strong><itlias>technology.</itlias></strong>
+At Veridian Dynamics, <strong>we</strong> solve <i>your</i> promblems with <strong><i>technology.</i></strong>
 <hr>
 
 <h4>Core Values</h4>
