Formatting changes and added quality gaurantee on bottom

--- a/welcome.html
+++ b/welcome.html
@@ -5,64 +5,64 @@
     <title>Veridian Dynamics</title>
 </head>
 <body>
-<div id="top"></div>
-<h1>Welcome to Veridian Dynamics!</h1>
-<br>
-At Veridian Dynamics, <strong>we</strong> solve <i>your</i> promblems with <strong><i>technology.</i></strong>
-<hr>
+    <div id="top"></div>
+    <h1>Welcome to Veridian Dynamics!</h1>
+    <br>
+    <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> promblems with <strong><i>technology.</i></strong></p>
+    <hr>
 
-<h4>Core Values</h4>
-<ul>
-    <li>Competence</li>
-    <li>Involvment </li>
-    <li>Technology </li>
-</ul>
-<h4>Our Process</h4>
-<ol>
-    <li>Plan</li>
-    <li>Evaluate</li>
-    <li>Implement</li>
-</ol>
-<h4>2020 Vision</h4>
-<ul>
-    <li>Become #1 in Technology</li>
-    <li>Increase Success by 20% </li>
-    <li>Increase Business by 30% </li>
-</ul>
-<hr>
+    <h4>Core Values</h4>
+        <ul>
+            <li>Competence</li>
+            <li>Involvment </li>
+            <li>Technology </li>
+        </ul>
+    <h4>Our Process</h4>
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
+    <h4>2020 Vision</h4>
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20% </li>
+            <li>Increase Business by 30% </li>
+        </ul>
+    <hr>
 
-<h4>Company Vision</h4>
+    <h4>Company Vision</h4>
+        <img width="300" src="img/pic1.jpeg" alt="computers">
+        <img width="300" src="img/pic2.jpeg" alt="computers">
+        <br>
+        <img width="300" src="img/pic3.jpeg" alt="computers">
+        <img width="300" src="img/pic4.jpeg" alt="computers">
 
-<img width="300" src="img/pic1.jpeg" alt="computers">
-<img width="300" src="img/pic2.jpeg" alt="computers">
-<br>
-<img width="300" src="img/pic3.jpeg" alt="computers">
-<img width="300" src="img/pic4.jpeg" alt="computers">
+    <h4>Our Product</h4>
+        <table>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Features</th>
+            </tr>
+            <tr>
+                <td>Starter</td>
+                <td>$99</td>
+                <td>Base Technology</td>
+            </tr>
+            <tr>
+                <td>Advanced</td>
+                <td>$199</td>
+                <td>Additional Features</td>
+            </tr>
+            <tr>
+                <td>Premium</td>
+                <td>$499</td>
+                <td>Unlimited Support</td>
+            </tr>
+        </table>
 
-<h4>Our Product</h4>
-<table>
-    <tr>
-        <th>Plan</th>
-        <th>Price</th>
-        <th>Features</th>
-    </tr>
-    <tr>
-        <td>Starter</td>
-        <td>$99</td>
-        <td>Base Technology</td>
-    </tr>
-    <tr>
-        <td>Advanced</td>
-        <td>$199</td>
-        <td>Additional Features</td>
-    </tr>
-    <tr>
-        <td>Premium</td>
-        <td>$499</td>
-        <td>Unlimited Support</td>
-    </tr>
-</table>
-
-<a href="#top">Go to the top of the page.</a>
-</body>
+        <p><i>All products come with our quality gaurantee&trade;</i></p>
+        <a href="#top">Go to the top of the page.</a>
+    </body>
 </html>
