changed named form.html to form-debug.html changes to forms.html added six new files.

--- a/forms.html
+++ b/forms.html
@@ -24,15 +24,23 @@
             </div>
             <div>
                 <h4>How you hear about us?</h4>
-                <input type="radio" name="billboard" value="billboard">Billboard<br>
-                <input type="radio" name="radio" value="radio">Radio Advertisement<br>
-                <input type="radio" name="internet" value="internet">Internet<br>
-                <input type="radio" name="other" value="other">Other<br>
+                <label>
+                    <input type="radio" name="billboard" value="billboard">Billboard<br>
+                </label>
+                <label>
+                    <input type="radio" name="radio" value="radio">Radio Advertisement<br>
+                </label>
+                <label>
+                    <input type="radio" name="internet" value="internet">Internet<br>
+                </label>
+                <label>
+                    <input type="radio" name="other" value="other">Other<br>
+                </label>
             </div>
             <div>
                 <h4>What browser are you using?</h4>
                 <select name="browser" id="browser">
-                    <option value="firefox">Firefox</option>
+                    <option value>Firefox</option>
                     <option value="edge">Edge</option>
                     <option value="chrome">Chrome</option>
                     <option value="string">Two cans and string</option>
