--- a/form-debug.html
+++ b/form-debug.html
@@ -7,24 +7,23 @@
 <body>
     <h1>Please Sign Up</h1>
     <form method="POST" action="https://hookb.in/E7Rer148">
-        <label for="username">Username</label>
-        <input id="username" type="text" name="username">
+        <label for="username">Username:</label>
+        <input id="username" type="text" name="username" placeholder="Username" autofocus>
         <br>
 
-        <label for="email">Email</label>
-        <input id="email" type="text">
+        <label for="emailAddress">Email Address:</label>
+        <input name="emailAddress" id="emailAddress" type="email" placeholder="email">
         <br>
 
-        <label for="password">password</label>
+        <label for="password">Password:</label>
         <input id="password" type="password" name="password">
         <br>
 
-        <label for="confirm_password">confirm password</label>
+        <label for="confirm_password">Confirm Password:</label>
         <input id="confirm_password" type="password" name="confirm_password">
         <br>
 
         <h2>Filing Status</h2>
-
         <label for="single">
             <input id="single" type="radio" name="filing_status" value="single">
             Single
@@ -50,7 +49,6 @@
         <br>
         
         <h2>This past year I was (check all that apply)</h2>
-
         <label for="self_employed">
             <input id="self_employed" type="checkbox" name="employment_status" value="self_employed">
             Self - Employed
