added new style sheets, new img, and new html. lots of style updates to welcome.html

--- a/advertisement.html
+++ b/advertisement.html
@@ -29,3 +29,8 @@
     </fieldset>
 </body>
 </html>
+
+<!--advertisement.html-->
+<!--Make a form for making an advertisement. Cursor in title on page load.-->
+<!--Title, price, description required. Descrition should hold lots of text.-->
+
