--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <title>Register</title>
 </head>
 <body>
-<h4>Please login to continue.</h4>
 <fieldset>
+    <legend><h4>Please login to continue</h4></legend>
     <form method="POST" action="https://hookb.in/E7Rer148">
 
         <div>
@@ -35,3 +35,8 @@
 </fieldset>
 </body>
 </html>
+
+<!--login.html-->
+<!--login form w/ username and password fields-->
+<!--all form inputs are required.-->
+<!--add a "keep me logged in" check box that's already checked.-->
