--- a/residential_lease.html
+++ b/residential_lease.html
@@ -8,12 +8,29 @@
     <title>Residential Lease Application</title>
 </head>
 <body>
+    <h4>Texas Association of Realtors&#8482;</h4>
+    <h3><strong>RESIDENTIAL LEASE APPLICATION</strong></h3>
+    <strong>Each occupant and co-applicant 18 years or older must submit a separate application.</strong>
+    <hr>
 
-    <form action="">
+
+    <select name="coffee_preference">
+        <option value="light">Light Roast</option>
+        <option value="dark">Dark Roast</option>
+        <option value="espresso">Espresso Blend</option>
+    </select>
+
+    div#breakfast>select>option.coffee$*5^select>option.bread$*5^select>option.eggs$*5
+
+    form#coffee>div#coffee>
+
+    h1#fancy-header
 
 
 
-    </form>
+
+
+
 </body>
 </html>
 
