--- a/subscribe.html
+++ b/subscribe.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <fieldset>
+    <legend><h4>To subscribe please fill in email below.</h4></legend>
     <form method="POST" action="https://hookb.in/E7Rer148">
         <div>
-            <h4>To subscribe please fill in email below.</h4>
             <label for="emailAddress">Email Address
                 <input name="emailAddress" id="emailAddress" type="email" placeholder="email" autofocus>
             </label>
@@ -27,3 +27,7 @@
     </fieldset>
 </body>
 </html>
+
+<!--subscribe.html-->
+<!--Make a single input for to hold an email address.  Only accept email addresses.-->
+<!--Checkbox should be checked already. Make sure the email field has focus.-->
