--- a/password_change.html
+++ b/password_change.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>Password Change.</h4>
     <fieldset>
+        <legend><h4>Password Change</h4></legend>
         <form method="POST" action="https://hookb.in/E7Rer148">
 
             <div>
