--- a/register.html
+++ b/register.html
@@ -91,3 +91,13 @@
     </fieldset>
 </body>
 </html>
+
+
+<!--register.html-->
+<!--Register new user. Labels all around. all inputs except middle name required.-->
+<!--First name, last name, middle, email, password, username, birthdate-->
+<!--email input should only accept emails.-->
+<!--birthdate should only accept dates.-->
+<!--Add a handful of checkboxes (and labels) for operating systems (OS X, Windows, Linux, OS2, ChromeOS)-->
+<!--Add a handful of checkboxes and labels for the name of every programming language you have a name for.-->
+<!--When the page loads, make sure the cursor starts in the first name field-->
