--- a/welcome.html
+++ b/welcome.html
@@ -3,32 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+
 </head>
 <body>
     <div id="top"></div>
-    <h1>Welcome to Veridian Dynamics!</h1>
+    <h1 id="fancy-header">Welcome to Veridian Dynamics!</h1>
     <br>
     <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> promblems with <strong><i>technology.</i></strong></p>
     <hr>
-
-    <h4>Core Values</h4>
+    <fieldset>
+    <legend><h4>Core Values</h4></legend>
         <ul>
             <li>Competence</li>
             <li>Involvment </li>
             <li>Technology </li>
         </ul>
-    <h4>Our Process</h4>
+    </fieldset>
+    <fieldset>
+    <legend><h4>Our Process</h4></legend>
         <ol>
             <li>Plan</li>
             <li>Evaluate</li>
             <li>Implement</li>
         </ol>
-    <h4>2020 Vision</h4>
+    </fieldset>
+    <fieldset>
+    <legend><h4>2020 Vision</h4></legend>
         <ul>
             <li>Become #1 in Technology</li>
             <li>Increase Success by 20% </li>
             <li>Increase Business by 30% </li>
         </ul>
+    </fieldset>
     <hr>
 
     <h4>Company Vision</h4>
