--- a/welcome.html
+++ b/welcome.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Macondo|Sedgwick+Ave+Display" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
     <hr>
     <fieldset>
     <legend><h4>Core Values</h4></legend>
-        <ul>
+        <ul class="centered">
             <li>Competence</li>
             <li>Involvment </li>
             <li>Technology </li>
