Finished HTML for residential Lease

--- a/css_box_model.html
+++ b/css_box_model.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 <h1><a href="https://en.wikipedia.org/wiki/Visible_spectrum">Visible Spectrum Waveleghts</a></h1>
-<div id="box-red" class="box">620-750nm</div>
-<br>
+<div class="box red">620-750nm</div>
 <div class="box orange">590-620nm</div>
 <div class="box yellow">570-590nm</div>
 <div class="box green">495-570nm</div>
