--- a/residential_lease.html
+++ b/residential_lease.html
@@ -12,6 +12,140 @@
     <h3><strong>RESIDENTIAL LEASE APPLICATION</strong></h3>
     <strong>Each occupant and co-applicant 18 years or older must submit a separate application.</strong>
     <hr>
+    <form action="">
+        <p>
+            Property Address:<input type="text" name="property">
+        </p>
+        <p>
+        Anticipated: Move-in Date:<input type="text" name="move-in">
+            Monthly Rent:$ <input type="text" name="monthly-rent">
+            Security Deposit:$ <input type="text" name="security">
+        </p>
+        <br>
+        <p>Applicant was referred to Landlord by:</p>
+        <p>
+        <input type="checkbox" name="real_estate_agent" value="true">Real estate agent
+        <input type="text" name="real_estate_name">(name)<input type="text" name="real_estate_phone"(phone)
+        </p>
+        <p>
+            <input type="checkbox" name="newspaper" value="true">Newspaper<input type="checkbox" name="sign" value="true">Sign
+            <input type="checkbox" name="internet" value="true">Internet<input type="checkbox" name="other" value="true">Other
+            <input type="text" name="referred_other">
+        </p>
+        <p>
+            Applicant's name (first,middle,last)<input type="text" name="app_name">
+        </p>
+        <p>
+            Is there a co-applicant?<input type="checkbox" name="coapp_yes" value="true">Yes<input type="checkbox" name="coapp_no" value="true">NO
+            <strong>If yes, co-applicant must submit a separate application.</strong>
+        </p>
+        <p>
+            Applicant's former last name (maiden or married)<input type="text" name="maiden_name">
+        </p>
+        <p>
+            E-mail<input type="text" name="email">Home Phone<input type="text" name="home_phone">
+        </p>
+        <p>
+            Work Phone<input type="text" name="work_phone">Moblie/Pager<input type="text" name="moblie">
+        </p>
+        <p>
+            Soc.Sec.No.<input type="text" name="ssn">Driver License No.<input type="text" name="drive_lic_number"
+        </p>
+        <p>
+            Date of Birth<input type="text" name="dob">Height<input type="text" name="height">Weight<input type="text" name="weight">
+            Eye Color<input type="text" name="eye_color">
+        </p>
+        <br>
+        <p>
+            Emergency Contact: Name: <input type="text" name="name911"><br>
+            Address:<input type="text" name="address911">
+            Phone:<input type="text" name="phone911">Email:<input type="text" name="email911">
+        </p>
+        <p>
+            Name all other persons who will occupy the Property:
+        </p>
+        <p>
+            Name:<input type="text" name="occupy_name1">Relationship:<input type="text" name="occupy_rela1">
+            Age:<input type="text" name="occupy_age">
+        </p>
+        <p>
+            Name:<input type="text" name="occupy_name1">Relationship:<input type="text" name="occupy_rela1">
+            Age:<input type="text" name="occupy_age">
+        </p>
+        <p>
+        Name:<input type="text" name="occupy_name1">Relationship:<input type="text" name="occupy_rela1">
+        Age:<input type="text" name="occupy_age">
+        </p>
+        <p>
+            Name:<input type="text" name="occupy_name1">Relationship:<input type="text" name="occupy_rela1">
+            Age:<input type="text" name="occupy_age">
+        </p>
+        <div>
+            Applicant's Current Address<input type=text" name="current_address">Apt. No<input type="text" name="apt">(city, state, zip)
+        </div>
+        <div>
+            <p>Landlord's Name<input type="text" name="landlord_name">Email:<input type="text"
+        </div>
+        <div>
+            <p>Phone:<em>Day</em><input type="text" name="landlord_day_phone"><em>Nt:</em><input type="text" name="landlord_nt_phone"><em>Mb:</em>
+            <input type="text" name="landlord_moblie"><em>Fax:</em><input type="text" name="landlord_fax">
+            </p>
+        </div>
+        <div>
+            <p>Date Moved-In<input type="text" name="current_movein">Move-Out Date<input type="text" name="current_moveout">
+                Rent$<input type="text" name="current_rent">
+            </p>
+        </div>
+        <div>
+            <p>Reason for move:<input type="text" name="current_reason">
+            </p>
+        </div>
+        <div>
+            <p>
+                Applicant's Previous Address<input type="text" name="previous_address">Apt. No.<input type="text" name="previous_apt">(city,state,zip)
+            </p>
+            <p>
+                Previous Landlord's Name<input type="text" name="previous_landlord_name">Email:<input type="previous_landlord_email">
+            </p>
+            <p>Phone:<em>Day</em><input type="text" name="plandlord_day_phone"><em>Nt:</em><input type="text" name="plandlord_nt_phone"><em>Mb:</em>
+                <input type="text" name="plandlord_moblie"><em>Fax:</em><input type="text" name="plandlord_fax">
+            </p>
+            <p>Date Moved-In<input type="text" name="pervious_movein">Move-Out Date<input type="text" name="pervious_moveout">
+                Rent$<input type="text" name="pervious_rent">
+            </p>
+            <p>Reason for move:<input type="text" name="pervious_reason">
+            </p>
+        </div>
+        <div>
+            <p>
+                Applicant's Current Employer:<input type="text" name="employer">
+            </p>
+            <p>
+                Address:<input type="text" name="employer_address">(street,city,state,zip)
+            </p>
+            <p>Supervisor's Name:<input type="text" name="supervisor_name">Phone:<input type="text" name="supervisor_phone">
+                Fax:<input type="text" name="supervisor_fax">
+            </p>
+            <p>
+                Email:<input type="text" name="supervisor_email">
+            </p>
+            <p>
+                Start Date:<input type="text" name="job_start">Gross Monthly Income$<input type="text" name="gross">
+                Position:<input type="text" name="position"
+            </p>
+        </div>
+
+
+
+
+
+
+
+
+        <br><br>
+        <button type="submit">Submit the form</button>
+    </form>
+
 
 
 
@@ -23,5 +157,28 @@
 
 </body>
 </html>
+
+
+
+<!--<input type="text" name="email" placeholder="Enter your email address">-->
+<!--<input type="password" name="password">-->
+
+<!--<input name="newsletter_signup" value="true" type="checkbox" checked>-->
+
+<!--A <input type="radio" name="quiz_question_1" value="a"><br>-->
+<!--B <input type="radio" name="quiz_question_1" value="b"><br>-->
+<!--C <input type="radio" name="quiz_question_1" value="c"><br>-->
+<!--D <input type="radio" name="quiz_question_1" value="d"><br>-->
+
+<!--<select name="coffee_preference">-->
+    <!--<option value="light">Light Roast</option>-->
+    <!--<option value="dark">Dark Roast</option>-->
+    <!--<option value="espresso">Espresso Blend</option>-->
+<!--</select>-->
+
+
+
+
+
 
 <!--https://eforms.com/images/2015/12/texas-residential-lease-application-form-791x1024.png-->
