--- a/texas-flag.html
+++ b/texas-flag.html
@@ -7,31 +7,58 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        .texas {
-            margin: 3em;
-            width: 24em;
-            height: 16em;
-            box-shadow: 0px 0px 10px lightgray;
-            background: linear-gradient(rgb(255,255,255) 50%, rgb(191,10,48) 50%);
-        }
+        /*.texas {*/
+            /*margin: 3em;*/
+            /*width: 24em;*/
+            /*height: 16em;*/
+            /*box-shadow: 0px 0px 10px lightgray;*/
+            /*background: linear-gradient(rgb(255,255,255) 50%, rgb(191,10,48) 50%);*/
+        /*}*/
 
-        .texas::before {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            line-height: 1em;
-            width: 33%;
-            height: 100%;
-            content: '★';
-            font-size: 6em;
-            color: rgb(255,255,255);
-            background: rgb(0,40,104);
+        /*.texas::before {*/
+            /*display: flex;*/
+            /*align-items: center;*/
+            /*justify-content: center;*/
+            /*line-height: 1em;*/
+            /*width: 33%;*/
+            /*height: 100%;*/
+            /*content: '💩';*/
+            /*font-size: 6em;*/
+            /*color: rgb(255,255,255);*/
+            /*background: rgb(0,40,104);*/
+        /*}*/
+        .white {
+            width: 100%;
+            height: 250px;
+            border: 0px;
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            background-color: #ff6d68;
+        }
+        red {
+            width: 100%;
+            height:250;
+            border: 0px;
+            position: fixed;
+            bottom: 0px;
+            right: 0px;
+            background-color: red;
+        }
+        blue {
+
+
         }
     </style>
+
 </head>
 <body>
-    <div class="texas"></div>
+        <div class="white"></div>
+        <div class="red"></div>
+        <div class="blue"></div>
+    </div>
 </body>
 </html>
 
 <!--https://gist.github.com/tamalw/5344386dc229d61cd6b0-->
+
