--- a/texas-flag.html
+++ b/texas-flag.html
@@ -20,34 +20,39 @@
             /*align-items: center;*/
             /*justify-content: center;*/
             /*line-height: 1em;*/
-            /*width: 33%;*/
-            /*height: 100%;*/
             /*content: '💩';*/
             /*font-size: 6em;*/
-            /*color: rgb(255,255,255);*/
-            /*background: rgb(0,40,104);*/
         /*}*/
         .white {
             width: 100%;
-            height: 250px;
+            height: 50%;
             border: 0px;
             position: fixed;
             top: 0px;
             left: 0px;
-            background-color: #ff6d68;
+            background-color: white;
         }
-        red {
+        .red {
             width: 100%;
-            height:250;
+            height: 50%;
             border: 0px;
             position: fixed;
             bottom: 0px;
-            right: 0px;
+            left: 0px;
             background-color: red;
         }
-        blue {
-
-
+        .blue {
+            width: 40%;
+            height: 100%;
+            border: 0px;
+            position: fixed;
+            bottom: 0px;
+            left: 0px;
+            background-color: blue;
+            clear: left;
+            float: left;
+            font-size: 6em;
+            text-align:center;
         }
     </style>
 
@@ -55,8 +60,7 @@
 <body>
         <div class="white"></div>
         <div class="red"></div>
-        <div class="blue"></div>
-    </div>
+        <div class="blue">💩</div>
 </body>
 </html>
 
