Updates to gittinggit and texas flag

--- a/getting-git.html
+++ b/getting-git.html
@@ -10,18 +10,21 @@
 </head>
 <body>
     <div class="top-part">
-    <h4>getting git</h4>
-        <p>A comprehensive video course from git init to Git Master.</p>
-        <button type="submit">
+        <img width="600" src="img/getting-git.svg" alt="Getting Git">
+        <p>A comprehensive video course from <code>git init</code> to <em>Git Master.</em></p>
+        <button type="submit" id="button">
             <span>Purchase for $29</span>
         </button>
+        <a id="log-in" href="https://gettinggit.com/login">Log in</a>
         <p>
             <b>Getting started?</b>
             What the
-            <a href="">course intro</a>
+            <a href="#watch">course intro</a><br>
             .
         </p>
     </div>
+    <div class="main-part"><br>
+        <section id="watch">
         <h2>Course Introduction</h2>
         <p>
             <b>Want more?</b>
@@ -29,6 +32,7 @@
             <a href="https://gettingit.com/learn">4 introuctory videos</a>
             for free.
         </p>
+        </section>
         <h4>Course Overview</h4>
     <br>
         <p>
@@ -40,5 +44,91 @@
             to help you learn Git commands in detail as well as cover everyday
             scenarios you'll encounter when using Git.
         </p>
+        <p>
+            <h4>Getting started</h4>
+            <em>Getting Git</em>
+            starts with
+            <strong>4 videos</strong>
+            to give you a feel for the course as well as ensure you have Git installed
+            and configured. You can <a href=https://vimeo.com/album/4319966" target="_blank" rel="external">
+            watch all them now </a> for free.
+        </p>
+        <p>
+            <h4>Making Changes</h4>
+            <em>Part 1</em>
+            contains
+            <strong>14 videos</strong>
+            to learn Git commmands to manage a standalone Git repository, including:
+            <code>git init</code>, <code>git add</code>, <code>git show</code>
+            , <code>git rm</code>, and <git>git revert</git>.
+        </p>
+        <p>
+            <h4>Viewing History</h4>
+            <em>Part 2</em>
+            contains
+            <strong>10 videos</strong>
+            to learn Git commands to view current and past changes, including:
+            <code>git branch</code>,
+            <code>git checkout</code>,
+            <code>git merge</code>,
+            <code>git cherry-pick</code>, and
+            <code>git rebase</code>.
+        </p>
+        <p>
+            <h4>Managing Workflows</h4>
+            <em>Part 3</em>
+            contains
+            <strong>12 videos</strong>
+            to learn Git commands to manage multiple development within a single Git repository.
+            This includes:
+            <code>git branch</code>,
+            <code>git checkout</code>,
+            <code>git merge</code>,
+            <code>git cherry-pick</code>, and
+            <code>git rebase</code>.
+        </p>
+        <p>
+            <h4>Sharing Work</h4>
+            <em>Part 4</em>
+            contains
+            <strong>12 videos</strong>
+            to learn Git commands to share a Git repository. This includes:
+            <code>git clone</code>,
+            <code>git push</code>,
+            <code>git pull</code>,
+            <code>git fetch</code>, and
+            <code>git remote</code>.
+        </p>
+        <p>
+            <h4>Everyday Git</h4>
+            <em>Everyday Git</em>
+            is a sub-course of
+            <em>Getting Git</em>
+            covering everyday scenarios you'll encounter when using Git. Videos will
+            continually be added at no additional charge.
+        </p>
+    </div>
+    <div class="get-started">
+            <h4>Ready to get started?</h4>
+            <p>
+            Get full access for just $29!
+            </p>
+            <button type="submit" id="button">
+                <span>Purchase for $29</span>
+            </button>
+            <p>
+            <strong>Need to use PayPal?</strong>
+            Send payment to jmac@gettinggit.com.
+            </p>
+    </div>
+    <div class="questions-footer">
+            <h4>Have more questions?</h4>
+            <p>
+                No promblem. Just
+                <a href="mailto:spand3r@gmail.com">email me</a>
+                . Unless I'm sleeping, you'll receive a pretty snappy reply.
+            </p>
+    </div>
+
 </body>
 </html>
