--- a/texas-flag.html
+++ b/texas-flag.html
@@ -51,8 +51,14 @@
             background-color: blue;
             clear: left;
             float: left;
-            font-size: 6em;
-            text-align:center;
+            font-size: 7em;
+        }
+        #poop {
+            position: relative;
+            float: left;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 
@@ -60,7 +66,7 @@
 <body>
         <div class="white"></div>
         <div class="red"></div>
-        <div class="blue">💩</div>
+        <div class="blue"><span id="poop">🤠</span></div>
 </body>
 </html>
 
