--- a/facebook.html
+++ b/facebook.html
@@ -84,7 +84,56 @@
 
     </section>
     <section class="bottom-footer">
-        English(US)  Español  Français(France)  中文(简体)   العربية  Português(Brasil)  Italiano  한국어  Deutsch  हिन्दी日本語
+        <table>
+            <tr>
+                <th>English(US)</th>
+                <th>Español</th>
+                <th>Français(France)</th>
+                <th>中文(简体)</th>
+                <th>Português(Brasil)</th>
+                <th>Italiano</th>
+                <th>한국어</th>
+                <th>Deutsch</th>
+                <th>हिन्दी日本語</th>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>Sign Up</td>
+                <td>Log in</td>
+                <td>Messenger</td>
+                <td>Facebook Lite</td>
+                <td>Moblie</td>
+                <td>Find Friends</td>
+                <td>People</td>
+                <td>Pages</td>
+                <td>Games</td>
+                <td>Locations</td>
+            </tr>
+            <tr>
+                <td>Celebrites</td>
+                <td>Marketplace</td>
+                <td>Groups</td>
+                <td>Recipes</td>
+                <td>Sports</td>
+                <td>Look</td>
+                <td>Moments</td>
+                <td>Instagram</td>
+                <td>Local</td>
+                <td>About</td>
+                <td>Create Ad</td>
+            </tr>
+            <tr>
+                <td>Create Page</td>
+                <td>Developers</td>
+                <td>Careers</td>
+                <td>Privacy</td>
+                <td>Cookies</td>
+                <td>Ad Choices</td>
+                <td>Terms</td>
+                <td>Help</td>
+            </tr>
+        </table>
 
     </section>
 
