--- a/getting-git.html
+++ b/getting-git.html
@@ -12,7 +12,7 @@
     <div class="top-part">
         <img width="600" src="img/getting-git.svg" alt="Getting Git">
         <p>A comprehensive video course from <code>git init</code> to <em>Git Master.</em></p>
-        <button type="submit" id="button">
+        <button type="submit" id="button" class="btn">
             <span>Purchase for $29</span>
         </button>
         <a id="log-in" href="https://gettinggit.com/login">Log in</a>
@@ -113,7 +113,7 @@
             <p>
             Get full access for just $29!
             </p>
-            <button type="submit" id="button">
+            <button type="submit" id="button" class="btn">
                 <span>Purchase for $29</span>
             </button>
             <p>
