--- a/media-queries-grid.html
+++ b/media-queries-grid.html
@@ -19,40 +19,35 @@
         <div class="column title">
             <h1>Company</h1>
         </div>
-    </div>
-    <div class="row">
-            <div class="column nav-links link">
+        <div class="column link">
+            <ul class="nav-links">
+            <li>
                 <a href="#">Home</a>
-            </div>
-            <div class="column nav-links link">
+            </li>
+            <li>
                 <a href="#">About</a>
-            </div>
-            <div class="column nav-links link">
+            </li>
+            <li>
                 <a href="#">Work</a>
-            </div>
-            <div class="column nav-links link">
+            </li>
+            <li>
                 <a href="#">Contact</a>
-            </div>
-    </div>
+            </li>
+            </ul>
+        </div>
     <div class="row header-img">
         <div class="column">
-            <img src="http://lorempixel.com/g/900/400" alt="">
+            <img src="http://lorempixel.com/g/900/400/sports" alt="">
         </div>
     </div>
     <div class="row">
-        <div class="column mainmain">
-        <section id="main" class="main">
+        <div class="column main">
             <h2>Main Section</h2>
             <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
-        </section>
         </div>
-    </div>
-    <div class="row">
-        <div class="column sub">
-        <section class="sub-section">
+        <div class="column sub-section">
             <h2>Sub-section</h2>
             <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-        </section>
         </div>
     </div>
 </div>
@@ -68,3 +63,8 @@
 </footer>
 </body>
 </html>
+
+jmaridth
+the imposter's handbook
+big-O complexity
+
