--- a/grid-cnn-sport.html
+++ b/grid-cnn-sport.html
@@ -10,24 +10,24 @@
 <body>
     <div class="row">
         <!--Main story, 2 columns, 1st img 60% with 4 stories under it, 2nd img 40% column on top 25%-->
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="column two-thirds"></div>
+        <div class="column one-thirds"></div>
     </div>
     <div class="row">
         <!--"More then Game" 2 columns, 50% columns, top half of column img with bottom half 25%img text *2-->
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="column one-half"></div>
+        <div class="column one-half"></div>
     </div>
     <div class="row">
         <!--"Beyond the white line", 3 columns, 33% columns, 60% Img + 40% 3 rows text-->
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="column one-third"></div>
+        <div class="column one-third"></div>
+        <div class="column one-third"></div>
     </div>
     <div class="row">
         <!--"US Sports" 2 columns, in each column its split between to img-->
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="column one-half"></div>
+        <div class="column one-half"></div>
     </div>
 
 </body>
