Updates to the bootstrap panels

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -62,7 +62,10 @@
             <div class="panel panel-default">
                 <div class="panel-heading">Hand tossed</div>
                 <div class="panel-body">
+                    <p>
                     Garlic-season crust with a rich, buttery taste.
+                    </p>
+                </div>
                     <ul class="list-group">
                         <li class="list-group-item">
                             <div class="radio">
@@ -81,12 +84,13 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Crunchy thin crust</div>
                 <div class="panel-body">
                     Thin enough for the optimum cripsy to crunch ratio.
+                </div>
                     <ul class="list-group">
                         <li class="list-group-item">
                             <div class="radio">
@@ -121,7 +125,6 @@
         <div class="panel-body">
             <div class="panel panel-default">
                 <div class="panel-heading">Cheese?</div>
-                <div class="panel-body">
                     <ul class="list-group">
                         <li class="list-group-item">Cheese
                             <select class="form-control">
@@ -132,11 +135,9 @@
                             </select>
                         </li>
                     </ul>
-                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Sauce?</div>
-                <div class="panel-body">
                     <ul class="list-group">
                         <li class="list-group-item">Sauce
                             <select class="form-control">
@@ -154,7 +155,6 @@
                             </select>
                         </li>
                     </ul>
-                </div>
             </div>
         </div>
             <div class="panel-footer text-right">
@@ -163,7 +163,7 @@
                         <span class="glyphicon glyphicon-triangle-left"></span>
                         Previous Step
                     </button>
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn btn-primary" formaction="#topping">
                         Next Step
                         <span class="glyphicon glyphicon-triangle-right"></span>
                     </button>
@@ -172,11 +172,10 @@
         </div>
         <!--Choose Toppings-->
         <div class="panel panel-info">
-        <div class="panel-heading main-panel">Choose toppings</div>
+        <div class="panel-heading main-panel topping">Choose toppings</div>
         <div class="panel-body">
             <div class="panel panel-default">
                 <div class="panel-heading">Choose Meats</div>
-                <div class="panel-body">
                     <ul class="list-group">
                         <li class="list-group-item">
                             <div class="checkbox">
@@ -211,11 +210,9 @@
                             </div>
                         </li>
                     </ul>
-                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Choose Non-Meats</div>
-                <div class="panel-body">
                     <ul class="list-group">
                         <li class="list-group-item">
                             <div class="checkbox">
@@ -248,7 +245,6 @@
                             </div>
                         </li>
                     </ul>
-                </div>
             </div>
         </div>
             <div class="panel-footer text-right">
