Added <main class=container> to Pizza.html

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -45,6 +45,7 @@
     <div class="jumbotron">
         <h1>Welcome to Pizza World!</h1>
     </div>
+    <main class="container">
     <div>
         <h1>Build your own Pizza!</h1>
     </div>
@@ -255,7 +256,7 @@
             </div>
         </div>
     </div>
-
+    </main>
     <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
