--- a/inline_js.html
+++ b/inline_js.html
@@ -7,7 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body> 
+    <h1>Hello from the inline JavaScript!</h1>
 
+
+<script>
+    "user strict";
+
+
+    console.log("Hello from inline JavaScript");
+
+</script>
 </body>
 </html>
