--- a/conditionals.html
+++ b/conditionals.html
@@ -5,7 +5,8 @@
   <title>Title</title>
 </head>
 <body>
-
+    <h2>JavaScript Conditionals</h2>
 <script src="js/conditionals.js"></script>
 </body>
 </html>
+
