--- a/split-join.html
+++ b/split-join.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-<ul> <li>Mercury</li> <li>Venus</li> <li>Earth</li> <li>Mars</li> <li>Jupiter</li> <li>Saturn</li> <li>Uranus</li> <li>Neptune </li> </ul>
 
-<script src="js/planets-string.js"></script>
+<!--<script src="js/planets-string.js"></script>-->
+<script src="js/array_manipulation_bonuses.js"></script>
+
 </body>
 </html>
