Objects and Math Object added.

--- a/math-js.html
+++ b/math-js.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-<!--<script src="js/iterating.js"></script>-->
-<script src="BONUS/array_bonuses.js"></script>
+<script src="js/circle.js"></script>
 </body>
 </html>
